--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Práctica con java",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index-js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,5 +24,6 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
-  }
+  },
+  "type": "module"
 }
