--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/Vallejos00/java#readme",
   "dependencies": {
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "express-validator": "^6.14.2",
     "node-fetch": "^3.2.10",
     "nodemailer": "^6.7.8"
   },
