--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "express-validator": "^6.14.2",
+    "mongoose": "^6.6.2",
     "node-fetch": "^3.2.10",
     "nodemailer": "^6.7.8"
   },
